<resources>
    <string name="app_name">contacts</string>
    <string name="username">ФИО</string>
    <string name="email">почта</string>
    <string name="phone">телефон</string>
    <string name="add_contact">Добавить</string>
    <string name="take_photo">Фото</string>
    <string name="cancel">Отмена</string>
    <string name="no_items">Пусто</string>
    <string name="add_contact_title">Добавление контакта</string>
</resources>